[GTK][AC] Fix unexpected clear of ClutterContent. https://bugs.webkit.org/show_bug.cgi?id=115099

Patch by ChangSeok Oh <changseok.oh@collabora.com> on 2013-04-24
Reviewed by Gustavo Noronha Silva.

adoptGRef doesn't increase a reference count. So if a actor has a valid ClutterContent,
it would be cleared unexpectedly by smart pointer when escaping a function.

No new tests, no functionality changed.

* platform/graphics/clutter/GraphicsLayerActor.cpp:
(graphicsLayerActorUpdateTexture):

Canonical link: https://commits.webkit.org/133537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149038 268f45cc-cd09-0410-ab3c-d52691b4dbfc